--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.21.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "source-map-support": "^0.5.19",
+    "middy": "^0.36.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
@@ -30,17 +30,13 @@
     "aws-sdk": "^2.908.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
+    "serverless-bundle": "^4.3.1",
+    "serverless-dotenv-plugin": "^3.9.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-iam-roles-per-function": "^3.1.0",
     "serverless-offline": "^7.0.0",
-    "serverless-webpack": "^5.3.5",
-    "ts-loader": "^8.0.15",
-    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.20.2",
-    "webpack-node-externals": "^2.5.2"
+    "tsconfig-paths-webpack-plugin": "^3.3.0"
   },
   "author": "CJ Odina",
   "license": "MIT"
