--- a/backend/tsconfig.paths.json
+++ b/backend/tsconfig.paths.json
@@ -2,8 +2,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@auth/*": ["src/auth/*"],
+      "@businessLogic/*": ["src/businessLogic/*"],
+      "@dataLayer/*": ["src/dataLayer/*"],
       "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"]
+      "@libs/*": ["src/libs/*"],
+      "@models/*": ["src/models/*"],
+      "@requests/*": ["src/requests/*"],
+      "@utils/*": ["src/utils/*"],
     }
   }
 }
